[package]
name = "number_prefix"
description = "Library for formatting numeric prefixes: kilo, giga, kibi."

authors = [ "ogham@bsago.me" ]
documentation = "http://ogham.rustdocs.org/number_prefix/"
homepage = "https://github.com/ogham/rust-number-prefix"
license = "MIT"
readme = "README.md"
version = "0.2.5"

[dependencies]
num = "0.1"
