[package]
name = "number_prefix"
description = "Library for formatting numeric prefixes: kilo, giga, kibi."
version = "0.3.0"

authors = [ "Benjamin Sago <ogham@bsago.me>" ]
categories = ["algorithms", "no-std"]
documentation = "https://docs.rs/number_prefix"
repository = "https://github.com/ogham/rust-number-prefix"
keywords = ["mathematics", "numerics"]
license = "MIT"
readme = "README.md"


[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
features = ["std"]
